@@ -15,16 +15,15 @@ BEGIN {
 # (unique to this distribution) file ./lib/inc/Module/Install.pm instead
 # of the system inc::Module::Install or the bundled inc/Module::Install.
 use lib 'lib';
-use inc::Module::Install 0.75;
+use inc::Module::Install 0.76;
 
 name          'Module-Install';
 author        'Adam Kennedy <adamk@cpan.org>';
-perl_version  '5.004';
-repository    'http://svn.ali.as/cpan/trunk/Module-Install';
+perl_version  '5.005';
 all_from      'lib/Module/Install.pm';
 requires      'YAML::Tiny'        => '1.31';
 requires      'Module::ScanDeps'  => '0.83';
-requires      'Module::CoreList'  => '2.15';
+requires      'Module::CoreList'  => '2.13';
 requires      'PAR::Dist'         => '0.29';
 requires      'Archive::Tar'      => '1.38';
 requires      'ExtUtils::Install' => '1.50';
@@ -33,6 +32,10 @@ requires      'Module::Build'     => '0.2808';
 test_requires 'Test::Harness'     => '2.03';
 test_requires 'Test::More'        => '0.42';
 test_requires 'File::Remove'      => '1.40';
+
+# Normally this shouldn't be done in here, it should be done
+# by release automation. This is mostly for testing reasons.
+repository    'http://svn.ali.as/cpan/trunk/Module-Install';
 
 # Should be a "requires", but we have to solve the
 # "auto-include File::Spec if version < 5.005" problem first.
