@@ -6,7 +6,7 @@ use inc::Module::Install ();
 
 use vars qw{$VERSION @ISA};
 BEGIN {
-	$VERSION = '0.75';
+	$VERSION = '0.76';
 	@ISA     = qw{Module::Install};
 }
 
