@@ -7,7 +7,7 @@ use Module::Install::Base;
 
 use vars qw{$VERSION $ISCORE @ISA};
 BEGIN {
-	$VERSION = '0.75';
+	$VERSION = '0.76';
 	$ISCORE  = 1;
 	@ISA     = qw{Module::Install::Base};
 }
