@@ -7,7 +7,7 @@ use vars qw{$VERSION};
 BEGIN {
 	$|       = 1;
 	$^W      = 1;
-	$VERSION = '0.75';
+	$VERSION = '0.76';
 }
 
 use Test::More tests => 62;
